# contacs

./: .env  .gitignore  alembic.ini  contacts.db  database.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 0043ab1b756b_create_contacts_table.py  3da13e1fd9a2_add_created_at.py  60a3e2e03ff6_create_at_setted_to_ut.py  772691495db1_user_roles.py  7902fd92a110_env_rescue.py  827f75c29143_user_id_added_to_contacts.py  8d6f6a454b1b_add_user_id_to_contacts.py  a942543fbed8_database_changed_to_postgres.py  b52f0891fca2_create_at_updated_to_utc_with_timezone_.py  fd49d4c03929_create_users_table.py
auth/: dependencies.py  enums.py  models.py  router.py  schemas.py  security.py  service.py
contacs/: models.py
contacts/: models.py  router.py  schemas.py  service.py
core/: database.py  dependencies.py  security.py  settings.py  types.py
schemas/: contacts.py
